--- a/ARQ/Base.lproj/Main.storyboard
+++ b/ARQ/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ptM-GD-UgF">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="lIH-bc-AUV"/>
@@ -31,7 +31,7 @@
         <!--MVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="MVCViewController" customModule="CRUD_MVC" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MVCViewController" customModule="ARQ" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -59,12 +59,11 @@
                                     <action selector="addMovieBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ybl-Au-GP6"/>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Xzx-Gy-R8V">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Xzx-Gy-R8V">
                                 <rect key="frame" x="20" y="277" width="374" height="585"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="91" id="JQ9-o8-SJg" customClass="TableViewCellController" customModule="CRUD_MVC" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="91" id="JQ9-o8-SJg" customClass="TableViewCellController" customModule="ARQ" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="374" height="91"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JQ9-o8-SJg" id="heT-BW-O49">
@@ -117,20 +116,24 @@
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.90261651083075667" green="0.83913408578703708" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="Xzx-Gy-R8V" firstAttribute="top" secondItem="0AA-ci-KUS" secondAttribute="bottom" constant="44.5" id="1yp-1D-cKa"/>
                             <constraint firstItem="0AA-ci-KUS" firstAttribute="top" secondItem="gWJ-9V-Yez" secondAttribute="bottom" constant="16" id="6aZ-Cn-xDc"/>
                             <constraint firstItem="0AA-ci-KUS" firstAttribute="leading" secondItem="F60-MC-Acf" secondAttribute="leading" id="8rK-1W-8bR"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Xzx-Gy-R8V" secondAttribute="trailing" constant="20" id="Ape-xX-lS8"/>
                             <constraint firstItem="gWJ-9V-Yez" firstAttribute="top" secondItem="F60-MC-Acf" secondAttribute="bottom" constant="16" id="BM0-Dh-7Dd"/>
                             <constraint firstItem="df4-do-pjV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Gde-6a-VzI"/>
                             <constraint firstItem="df4-do-pjV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="NtU-0Y-ykI"/>
                             <constraint firstItem="0AA-ci-KUS" firstAttribute="leading" secondItem="gWJ-9V-Yez" secondAttribute="leading" id="OKh-MF-bqc"/>
                             <constraint firstItem="0AA-ci-KUS" firstAttribute="trailing" secondItem="gWJ-9V-Yez" secondAttribute="trailing" id="Pgc-df-oMb"/>
                             <constraint firstItem="F60-MC-Acf" firstAttribute="top" secondItem="df4-do-pjV" secondAttribute="bottom" constant="16" id="UIa-Hm-C84"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="Xzx-Gy-R8V" secondAttribute="bottom" constant="-49" id="Y4N-B2-m8D"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="0AA-ci-KUS" secondAttribute="bottom" constant="400" id="aXS-Mz-0T3"/>
                             <constraint firstItem="0AA-ci-KUS" firstAttribute="trailing" secondItem="df4-do-pjV" secondAttribute="trailing" id="eOq-XE-9Kd"/>
                             <constraint firstItem="0AA-ci-KUS" firstAttribute="trailing" secondItem="F60-MC-Acf" secondAttribute="trailing" id="rmc-hV-2e0"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="df4-do-pjV" secondAttribute="trailing" constant="20" id="skE-6D-oP5"/>
+                            <constraint firstItem="Xzx-Gy-R8V" firstAttribute="leading" secondItem="0AA-ci-KUS" secondAttribute="leading" id="tpT-CM-jQO"/>
                             <constraint firstItem="0AA-ci-KUS" firstAttribute="leading" secondItem="df4-do-pjV" secondAttribute="leading" id="xhL-l9-jTO"/>
                         </constraints>
                     </view>
@@ -150,7 +153,7 @@
         <!--SOA-->
         <scene sceneID="LZE-KU-fWA">
             <objects>
-                <viewController id="njd-0t-f6r" customClass="SOAViewController" customModule="CRUD_MVC" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="njd-0t-f6r" customClass="SOAViewController" customModule="ARQ" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="A8E-rG-ppR">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -178,12 +181,11 @@
                                     <action selector="addMovieBtn:" destination="njd-0t-f6r" eventType="touchUpInside" id="2f5-Te-i5i"/>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="fJI-V4-cJl">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="fJI-V4-cJl">
                                 <rect key="frame" x="20" y="277" width="374" height="585"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="91" id="UGw-Uu-dmr" customClass="TableViewCellController" customModule="CRUD_MVC" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="91" id="UGw-Uu-dmr" customClass="TableViewCellController" customModule="ARQ" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="374" height="91"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="UGw-Uu-dmr" id="fpq-Y8-o9M">
@@ -239,9 +241,11 @@
                         <color key="backgroundColor" red="0.99475707010523151" green="1" blue="0.85050152325805795" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="B3f-NF-VBB" firstAttribute="trailing" secondItem="5xV-rd-Tbh" secondAttribute="trailing" id="1vG-I4-P0w"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="fJI-V4-cJl" secondAttribute="bottom" constant="-49" id="4Ea-6g-caW"/>
                             <constraint firstItem="B3f-NF-VBB" firstAttribute="leading" secondItem="hpm-zR-Pus" secondAttribute="leading" id="9bU-n6-Bma"/>
                             <constraint firstItem="jvD-iR-2AC" firstAttribute="trailing" secondItem="Lte-cj-Qif" secondAttribute="trailing" constant="20" id="BFs-CO-cdh"/>
                             <constraint firstItem="B3f-NF-VBB" firstAttribute="leading" secondItem="Lte-cj-Qif" secondAttribute="leading" id="MyL-uM-A3q"/>
+                            <constraint firstItem="jvD-iR-2AC" firstAttribute="trailing" secondItem="fJI-V4-cJl" secondAttribute="trailing" constant="20" id="OXU-dp-uLd"/>
                             <constraint firstItem="5xV-rd-Tbh" firstAttribute="top" secondItem="hpm-zR-Pus" secondAttribute="bottom" constant="16" id="PMb-uu-4h5"/>
                             <constraint firstItem="B3f-NF-VBB" firstAttribute="trailing" secondItem="hpm-zR-Pus" secondAttribute="trailing" id="SCT-rv-XrJ"/>
                             <constraint firstItem="B3f-NF-VBB" firstAttribute="trailing" secondItem="Lte-cj-Qif" secondAttribute="trailing" id="T4s-Ap-szd"/>
@@ -249,7 +253,9 @@
                             <constraint firstItem="hpm-zR-Pus" firstAttribute="top" secondItem="Lte-cj-Qif" secondAttribute="bottom" constant="16" id="aJA-sz-58t"/>
                             <constraint firstItem="jvD-iR-2AC" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="B3f-NF-VBB" secondAttribute="bottom" constant="400" id="dPe-SM-K9G"/>
                             <constraint firstItem="B3f-NF-VBB" firstAttribute="leading" secondItem="5xV-rd-Tbh" secondAttribute="leading" id="g5j-q2-Jg1"/>
+                            <constraint firstItem="fJI-V4-cJl" firstAttribute="top" secondItem="B3f-NF-VBB" secondAttribute="bottom" constant="44.5" id="nKI-Ov-Rho"/>
                             <constraint firstItem="Lte-cj-Qif" firstAttribute="leading" secondItem="jvD-iR-2AC" secondAttribute="leading" constant="20" id="qNE-qD-qcj"/>
+                            <constraint firstItem="fJI-V4-cJl" firstAttribute="leading" secondItem="B3f-NF-VBB" secondAttribute="leading" id="uJn-FH-WtV"/>
                             <constraint firstItem="Lte-cj-Qif" firstAttribute="top" secondItem="jvD-iR-2AC" secondAttribute="top" id="x8o-ri-j8W"/>
                         </constraints>
                     </view>
@@ -269,7 +275,7 @@
         <!--CAPAS-->
         <scene sceneID="bQC-OB-5Ll">
             <objects>
-                <viewController id="1v5-Da-kjy" customClass="CAPASViewController" customModule="CRUD_MVC" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="1v5-Da-kjy" customClass="CAPASViewController" customModule="ARQ" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="PyJ-mv-lhs">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -297,12 +303,11 @@
                                     <action selector="addMovieBtn:" destination="1v5-Da-kjy" eventType="touchUpInside" id="baj-Lo-ykU"/>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Yo5-jQ-1vg">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Yo5-jQ-1vg">
                                 <rect key="frame" x="20" y="277" width="374" height="585"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="91" id="0Zj-fI-GMb" customClass="TableViewCellController" customModule="CRUD_MVC" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="91" id="0Zj-fI-GMb" customClass="TableViewCellController" customModule="ARQ" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="374" height="91"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0Zj-fI-GMb" id="aXp-cf-ZU6">
@@ -357,8 +362,12 @@
                         <viewLayoutGuide key="safeArea" id="5zE-yU-Svt"/>
                         <color key="backgroundColor" red="0.7991381021098356" green="0.89734656856548167" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
+                            <constraint firstItem="Yo5-jQ-1vg" firstAttribute="top" secondItem="umH-YX-rr4" secondAttribute="bottom" constant="44.5" id="096-n6-O3B"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="Yo5-jQ-1vg" secondAttribute="bottom" constant="-49" id="8h8-lc-UGV"/>
+                            <constraint firstItem="Yo5-jQ-1vg" firstAttribute="leading" secondItem="umH-YX-rr4" secondAttribute="leading" id="A5e-uu-1jr"/>
                             <constraint firstItem="umH-YX-rr4" firstAttribute="top" secondItem="e9c-Pe-RDW" secondAttribute="bottom" constant="16" id="DMM-dl-ftc"/>
                             <constraint firstItem="umH-YX-rr4" firstAttribute="leading" secondItem="cKb-k5-BFh" secondAttribute="leading" id="E8i-zA-t23"/>
+                            <constraint firstItem="5zE-yU-Svt" firstAttribute="trailing" secondItem="Yo5-jQ-1vg" secondAttribute="trailing" constant="20" id="Fej-83-IMW"/>
                             <constraint firstItem="kr0-7k-i0d" firstAttribute="top" secondItem="cKb-k5-BFh" secondAttribute="bottom" constant="16" id="I2K-lb-VLG"/>
                             <constraint firstItem="umH-YX-rr4" firstAttribute="trailing" secondItem="e9c-Pe-RDW" secondAttribute="trailing" id="R3m-66-O9O"/>
                             <constraint firstItem="umH-YX-rr4" firstAttribute="leading" secondItem="kr0-7k-i0d" secondAttribute="leading" id="X1W-c0-4og"/>
